--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Vite Github Pages Deployer
-      uses: skywarth/vite-github-pages-deployer@v1.2.0
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Install dependencies
+      run: npm i
+
+    - name: Build
+      run: npm run build
