--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "react-tooltip": "^5.23.0",
     "terser": "^5.24.0"
   },
   "devDependencies": {
